syntax = "proto3";

package nest.microservices;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

// // =========== HEALTH ===========
// service Health {
//   rpc check(HealthCheckRequest) returns (HealthCheckResponse);
//   rpc watch(HealthCheckRequest) returns (stream HealthCheckResponse);
// }

// message HealthCheckRequest {
//   string service = 1;
// }

// message HealthCheckResponse {
//   enum ServingStatus {
//     UNKNOWN = 0;
//     SERVING = 1;
//     NOT_SERVING = 2;
//     SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
//   }
//   ServingStatus status = 1;
// }


// =========== AUTH ===========
service AuthService {
  rpc verifyToken(VerifyTokenReq) returns (UserModel);
}

service UserService {
  rpc create(CreateUserRequest) returns (UserModel);
  rpc get(GetUserRequest) returns (UserModel);
  rpc list(ListUserRequest) returns (ListUserResponse);
  rpc update(UpdateUserRequest) returns (UserModel);
  rpc delete(DeleteUserRequest) returns (UserModel);
  rpc deleteMany(DeleteManyRequest) returns (DeleteManyResponse);
}

message VerifyTokenReq {
  string token = 1;
}

message UserModel {
  string id = 1;
  string email = 2;
  bool email_verified = 3;
  string name = 4; 
  optional string picture = 5; 
  repeated string roles = 6;
  repeated string permissions = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  optional google.protobuf.Timestamp deleted_at = 10;
  
  // google.protobuf.Struct metadata = 11; // additional metadata
  map<string, string> metadata = 11; // additional metadata
}

message GetUserRequest {
  optional string id = 1;
}

message ListUserRequest {
  optional string email = 1;
  optional string name = 2;
  optional string role = 3;
  optional string permission = 4;
  optional bool email_verified = 5;
  optional bool is_deleted = 6;

  optional google.protobuf.Timestamp created_at = 7;
  optional google.protobuf.Timestamp updated_at = 8;

  optional int32 limit = 9; // default 10
  optional int32 offset = 10; // default 0
}

message ListUserResponse {
  repeated UserModel items = 1;
  optional int32 total = 2;
  optional int32 limit = 3;
  optional int32 offset = 4;
}

message CreateUserRequest {
  optional string email = 1;
  optional string password = 2;
  optional string name = 3;
  optional string picture = 4;
  repeated string roles = 5;
  repeated string permissions = 6;
  optional google.protobuf.Struct metadata = 7;
}

message UpdateUserRequest {
  optional string id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string picture = 4;
  repeated string roles = 5;
  repeated string permissions = 6;
  optional google.protobuf.Struct metadata = 7;
}

message DeleteUserRequest {
  optional string id = 1;
}

message DeleteManyRequest {
  repeated string ids = 1;
}

message DeleteManyResponse {
  repeated UserModel items = 1;
  int32 total = 2;
  int32 deleted = 3;
}
