syntax = "proto3";

package nest.microservices;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service SubscriptionService {
  rpc customerPlan(CustomerPlanRequest) returns (CustomerPlanResponse);
}

message CustomerPlanRequest {
  string customerId = 1;
  string status = 2; // active, inactive, pending
}

message CustomerPlanResponse {
  string plan = 1; // plan name
  string status = 2; // active, inactive, pending
  map<string, string> metadata = 3;
}

